# cmake-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  configure.sh
include/myDynamicLib/: myDynamicLib.h
include/myStaticLib/: myStaticLib.h
myApp/: CMakeLists.txt  main.cpp
myDynamicLib/: CMakeLists.txt  myDynamicLib.cpp
myStaticLib/: CMakeLists.txt  myStaticLib.cpp
myTestApp/: CMakeLists.txt  main.cpp
